k8s/opengrok/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengrok
  namespace: opengrok
  labels:
    app: opengrok
spec:
  type: ClusterIP
  selector:
    app: opengrok
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
