k8s/opengrok/ingress.yaml
# Ingress dla Jenkins - jenkins.192.168.1.24.nip.io
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengrok-ingress
  namespace: opengrok
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: opengrok.192.168.1.24.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opengrok
            port:
              number: 8080
  tls:
  - hosts:
    - opengrok.192.168.1.24.nip.io
    secretName: opengrok-tls
